--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h1>Likitha Kowdi</h1>
                 <p>Data Science Enthusiast | Analyst | Python & SQL Developer</p>
                 <div class="buttons">
-                    <a href="https://drive.google.com/uc?id=1Pa2bD7zQY7TSUTQz8UWsS1BOk7AJQ5Z6&export=download" class="btn" download>Download CV</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1lAaMxeH0bqT-SfyGkm465IkkvKtV_FjJ" class="btn" download>Download CV</a>
                     <a href="#contact" class="btn">Contact</a>
                 </div>
                 <!-- Social Icons -->
